--- a/src/app/@theme/components/form/textarea-autocomplete/textarea-autocomplete.component.html
+++ b/src/app/@theme/components/form/textarea-autocomplete/textarea-autocomplete.component.html
@@ -19,7 +19,7 @@
   >
     <li
       class="dropdown-item" *ngFor="let dropdownValue of dropdownValues"
-      (click)="dropdownClick(dropdownValue)"
+      click="() => dropdownClick(dropdownValue)"
     >
       {{dropdownValue}}
     </li>
