--- a/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
+++ b/src/app/@theme/components/modal/confirmation-modal/confirmation-modal.component.html
@@ -1,7 +1,7 @@
-<modal [modalId]="modalId">
-  <modal-title>Confirm Action</modal-title>
+<app-modal [modalId]="modalId">
+  <app-modal-title>Confirm Action</app-modal-title>
 
-  <modal-body>
+  <app-modal-body>
     <p>Do you want to continue with the following action?</p>
 
     <div class="modal-controls">
@@ -13,5 +13,5 @@
         <i class="bi bi-x"></i> Cancel
       </button>
     </div>
-  </modal-body>
-</modal>
+  </app-modal-body>
+</app-modal>
