--- a/src/app/@theme/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/@theme/layouts/dashboard-layout/dashboard-layout.component.html
@@ -1,11 +1,11 @@
-<navigation></navigation>
+<app-navigation></app-navigation>
 
-<sidebar></sidebar>
+<app-sidebar></app-sidebar>
 
 <div class="content">
   <div class="content-body">
     <router-outlet (activate)="updateLayout()"></router-outlet>
   </div>
 
-  <page-footer></page-footer>
+  <app-page-footer></app-page-footer>
 </div>
