--- a/src/app/@theme/layouts/navigation/navigation.component.html
+++ b/src/app/@theme/layouts/navigation/navigation.component.html
@@ -7,7 +7,7 @@
     <div class="navbar-collapse">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" (click)="onToggleSidebar()"> <i class="bi bi-list"></i> </a>
+          <a class="nav-link" click="() => onToggleSidebar()"> <i class="bi bi-list"></i> </a>
         </li>
       </ul>
 
