--- a/src/app/@theme/layouts/page-header/page-header.component.html
+++ b/src/app/@theme/layouts/page-header/page-header.component.html
@@ -1,7 +1,7 @@
 <div class="page-header d-flex align-items-center">
   <h1 class="page-title">{{ pageTitle }}</h1>
   <span class="divider">|</span>
-  <breadcrumb></breadcrumb>
+  <app-breadcrumb></app-breadcrumb>
   <div class="mx-auto"></div>
   <ng-content></ng-content>
 </div>
