--- a/src/app/pages/@theme/cards/cards.component.html
+++ b/src/app/pages/@theme/cards/cards.component.html
@@ -1,22 +1,22 @@
-<page-header></page-header>
+<app-page-header></app-page-header>
 
-<page-body>
+<app-page-body>
   <div class="row">
 
     <div class="col-xl-3">
-      <card-countdown cardColour="primary" [count]="100" description="Test"></card-countdown>
+      <app-card-countdown appCardColour="primary" [count]="100" description="Test"></app-card-countdown>
     </div>
 
     <div class="col-xl-3">
-      <card-countdown cardColour="success" [count]="100" description="Test"></card-countdown>
+      <app-card-countdown appCardColour="success" [count]="100" description="Test"></app-card-countdown>
     </div>
 
     <div class="col-xl-3">
-      <card-countdown cardColour="dark" [count]="100" description="Test"></card-countdown>
+      <app-card-countdown appCardColour="dark" [count]="100" description="Test"></app-card-countdown>
     </div>
 
     <div class="col-xl-3">
-      <card-countdown cardColour="info" [count]="100" description="Test"></card-countdown>
+      <app-card-countdown appCardColour="info" [count]="100" description="Test"></app-card-countdown>
     </div>
 
     <div class="col-xl-6">
@@ -102,4 +102,4 @@
     </div>
 
   </div>
-</page-body>
+</app-page-body>
