--- a/src/app/pages/@theme/progress/progress.component.html
+++ b/src/app/pages/@theme/progress/progress.component.html
@@ -1,6 +1,6 @@
-<page-header></page-header>
+<app-page-header></app-page-header>
 
-<page-body>
+<app-page-body>
   <div class="row">
     <div class="col-xl-6">
       <div class="card">
@@ -141,4 +141,4 @@
     </div>
 
   </div>
-</page-body>
+</app-page-body>
