--- a/src/app/pages/@theme/typography/typography.component.html
+++ b/src/app/pages/@theme/typography/typography.component.html
@@ -1,6 +1,6 @@
-<page-header></page-header>
+<app-page-header></app-page-header>
 
-<page-body>
+<app-page-body>
   <div class="row">
 
     <div class="col-xl-6">
@@ -81,4 +81,4 @@
     </div>
 
   </div>
-</page-body>
+</app-page-body>
