--- a/src/app/pages/@trello/projects/export-csv/export-csv.component.html
+++ b/src/app/pages/@trello/projects/export-csv/export-csv.component.html
@@ -1,22 +1,22 @@
-<modal modalId="exportCSVProjectModal">
-  <modal-title>
+<app-modal modalId="exportCSVProjectModal">
+  <app-modal-title>
     Export Project as CSV
-  </modal-title>
+  </app-modal-title>
 
-  <modal-body>
+  <app-modal-body>
     <form [formGroup]="trelloForm">
       <div class="col-xl-12">
         <div class="form-group row">
-          <label class="col-xl-3 col-form-label"> Delimiters: </label>
+          <label for="delimiterInput" class="col-xl-3 col-form-label"> Delimiters: </label>
 
           <div class="col-xl-9">
-            <select class="form-control form-select" formControlName="csvDelimiter">
+            <select id="delimiterInput" class="form-control form-select" formControlName="csvDelimiter">
               <option *ngFor="let key of csvDelimiterKeys"> {{key}} </option>
             </select>
           </div>
         </div>
 
-        <label class="mb-3"> Select the fields to be exported and rename them as needed. </label>
+        <p class="mb-3"> Select the fields to be exported and rename them as needed. </p>
 
         <div class="input-group mb-2">
           <span class="input-group-text"> <input type="checkbox" formControlName="keepBoardName"> </span>
@@ -59,5 +59,5 @@
         Export CSV
       </button>
     </div>
-  </modal-body>
-</modal>
+  </app-modal-body>
+</app-modal>
