Update project name

--- a/src/app/@theme/layouts/navigation/navigation.component.html
+++ b/src/app/@theme/layouts/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="navigation">
   <nav class="navbar navbar-header fixed-top navbar-expand-lg">
     <div class="logo-banner">
-      <h2> Dashboard System </h2>
+      <h2> TrelloDash </h2>
     </div>
 
     <div class="navbar-collapse">
